# radar-custo-de-vida

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-pipeline.txt  requirements.txt
.claude/: launch.json
.github/workflows/: ingest.yml  transform.yml
dashboard/: app.py
dashboard/lib/: queries.py
dashboard/pages/: 1_Panorama.py  2_Inflacao_por_Categoria.py  3_Poder_de_Compra.py  4_Inflacao_Regional.py  5_Projecao.py
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/macros/: generate_schema_name.sql
dbt_project/models/marts/: _marts.yml  dim_tempo.sql  fct_previsao_ipca.sql  mart_inflacao_por_categoria.sql  mart_inflacao_regional.sql  mart_poder_compra_salario.sql
dbt_project/models/staging/: _sources.yml  _staging.yml  stg_bcb__series.sql  stg_ibge__ipca_regional.sql
docs/: arquitetura.md  catalogo-series.md  decisoes-tecnicas.md  deploy.md
ingestion/: bcb_client.py  config.py  db.py  ibge_client.py  logging_config.py  series_catalog.py  validate_catalog.py
ingestion/jobs/: ingest_bcb_series.py  ingest_ibge_regional.py
ingestion/sql/: 002_create_raw_tables.sql
ml/: backtest.py  data.py  forecast.py  save_forecast.py
tests/: conftest.py  test_backtest.py  test_bcb_client.py  test_series_catalog.py
